[gd_scene load_steps=6 format=3 uid="uid://3s30bx8fowxw"]

[ext_resource type="Texture2D" uid="uid://dbbeypndfsdu2" path="res://assets/background/rocks_2.png" id="1_gwu2e"]
[ext_resource type="Script" uid="uid://beurqthf04fsc" path="res://Scenes/Game/Game.gd" id="1_ln2h6"]
[ext_resource type="PackedScene" uid="uid://bksih3ddvwcms" path="res://Scenes/Plane/Plane.tscn" id="2_xbxml"]
[ext_resource type="PackedScene" uid="uid://dipw5h4cknein" path="res://UI/GameUI/GameUI.tscn" id="4_ln2h6"]
[ext_resource type="PackedScene" uid="uid://cfxjay4shm0m4" path="res://Scenes/ParallaxBg/ParallaxBg.tscn" id="5_y3kpf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ln2h6")

[node name="Rocks2" type="Sprite2D" parent="."]
visible = false
position = Vector2(234, 332)
texture = ExtResource("1_gwu2e")

[node name="ParallaxBg" parent="." instance=ExtResource("5_y3kpf")]
scale = Vector2(0.79, 0.79)

[node name="PipesHolder" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UpperPoint" type="Marker2D" parent="."]
position = Vector2(642, 262)

[node name="LowerPoint" type="Marker2D" parent="."]
position = Vector2(642, 630)

[node name="Plane" parent="." instance=ExtResource("2_xbxml")]
position = Vector2(71, 436)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" parent="CanvasLayer" instance=ExtResource("4_ln2h6")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
